Updated in-page links.

--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
       <h2>Local development environment</h2>
       <p>The most important tool in the developer's toolbox is a local development environment</p>
       <p>
-        <a class="btn btn-default" href="#best-practices" role="button">View details »</a>
+        <a class="btn btn-default" href="#local-development-environment" role="button">View details »</a>
       </p>
     </div>
   </div>
@@ -108,19 +108,22 @@
     <div class="col-md-4">
       <h2>Automated builds</h2>
       <p>Build on each push to repository and deploy to production using repeatable steps - automatically!</p>
+      <p>
+        <a class="btn btn-default" href="#automated-builds" role="button">View details »</a>
+      </p>
     </div>
     <div class="col-md-4">
       <h2>Automated testing</h2>
       <p>Writing automated tests could be hard, but there are ways to achieve quick wins in a very short time</p>
       <p>
-        <a class="btn btn-default" href="#best-practices" role="button">View details »</a>
+        <a class="btn btn-default" href="#automated-testing" role="button">View details »</a>
       </p>
     </div>
     <div class="col-md-4">
       <h2>Cloud hosting</h2>
       <p>Hosting in the cloud has proven to be the most reliable and hassle-fre approach</p>
       <p>
-        <a class="btn btn-default" href="#best-practices" role="button">View details »</a>
+        <a class="btn btn-default" href="#cloud-hosting" role="button">View details »</a>
       </p>
     </div>
   </div>
@@ -129,14 +132,14 @@
       <h2>Code cleanup</h2>
       <p>Whether it is a new or existing project, a code that follows coding standards is much easier to maintain</p>
       <p>
-        <a class="btn btn-default" href="#best-practices" role="button">View details »</a>
+        <a class="btn btn-default" href="#code-cleanup" role="button">View details »</a>
       </p>
     </div>
     <div class="col-md-4">
       <h2>Development processes</h2>
       <p>We help establish a process that fits your organisation</p>
       <p>
-        <a class="btn btn-default" href="#best-practices" role="button">View details »</a>
+        <a class="btn btn-default" href="#development-processes" role="button">View details »</a>
       </p>
     </div>
   </div>
@@ -240,13 +243,5 @@
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
 <script src="js/ie10-viewport-bug-workaround.js"></script>
 <script async src="//platform.twitter.com/widgets.js" charset="utf-8"></script>
-<script>
-  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-  })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
-  ga('create', 'UA-87769268-1', 'auto');
-  ga('send', 'pageview');
-</script>
 </body>
 </html>
