--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
     </div>
     <div class="col-md-4">
       <h2>Cloud hosting</h2>
-      <p>Hosting in the cloud has proven to be the most reliable and hassle-fre approach</p>
+      <p>Hosting in the cloud has proven to be the most reliable and hassle-free approach</p>
       <p>
         <a class="btn btn-default" href="#cloud-hosting" role="button">View details »</a>
       </p>
