Updated about us section.

--- a/index.html
+++ b/index.html
@@ -33,12 +33,11 @@
 
   <hr>
 
-  <h1 class="section-title">Who we are</h1>
+  <h1 class="section-title">About us</h1>
 
   <div class="intro">
     <p>
-      We are a collective of senior IT consultants who work in agile environment on the Client site and usually
-      as a part of the Client's team.
+      Integrated Experts are a collective of senior IT consultants who fully embed themselves into on-site development teams, and leverage agile methodologies to deliver outstanding results for businesses.
     </p>
     <p>
       Having us fully integrated, the Client is in the full control of the flow of the project and, at the same time,
