--- a/index.html
+++ b/index.html
@@ -34,21 +34,26 @@
   <hr>
 
   <h1 class="section-title">About us</h1>
+  <div class="row">
+    <div class="col-md-9 intro">
+      <p>
+        Integrated Experts are a collective of senior IT consultants who fully embed themselves into on-site development teams, and leverage agile methodologies to deliver outstanding results for businesses.
+      </p>
+      <p>
+        Having us fully integrated, the Client is in the full control of the flow of the project and, at the same time,
+        has all the expertise required to deliver it on-time.
+      </p>
+      <p>
+        Professionalism is our core value: anything we do follows the best practices and we are imposing this approach to all projects we are working on.
+      </p>
 
-  <div class="intro">
-    <p>
-      Integrated Experts are a collective of senior IT consultants who fully embed themselves into on-site development teams, and leverage agile methodologies to deliver outstanding results for businesses.
-    </p>
-    <p>
-      Having us fully integrated, the Client is in the full control of the flow of the project and, at the same time,
-      has all the expertise required to deliver it on-time.
-    </p>
-    <p>
-      Professionalism is our core value: anything we do follows the best practices and we are imposing this approach to all projects we are working on.
-    </p>
-
-    <blockquote>It's time to bring software projects to a level that a business can rely on!</blockquote>
+      <blockquote>It's time to bring software projects to a level that a business can rely on!</blockquote>
+    </div>
+    <div class="col-md-3 text-center">
+      <img src="img/association_org_member_badge.svg" alt="Drupal Association Organization Member Badge">
+    </div>
   </div>
+
 
   <hr>
 
@@ -235,18 +240,26 @@
   </footer>
 </div>
 
-
-  <div class="ribbon-wrapper-green"><div class="ribbon-green">Full site coming soon</div></div>
+<div class="ribbon-wrapper-green">
+  <div class="ribbon-green">Full site coming soon</div>
+</div>
 
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
 <script src="js/ie10-viewport-bug-workaround.js"></script>
 <script async src="//platform.twitter.com/widgets.js" charset="utf-8"></script>
 <script>
-  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-  })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+  (function (i, s, o, g, r, a, m) {
+    i['GoogleAnalyticsObject'] = r;
+    i[r] = i[r] || function () {
+        (i[r].q = i[r].q || []).push(arguments)
+      }, i[r].l = 1 * new Date();
+    a = s.createElement(o),
+      m = s.getElementsByTagName(o)[0];
+    a.async = 1;
+    a.src = g;
+    m.parentNode.insertBefore(a, m)
+  })(window, document, 'script', 'https://www.google-analytics.com/analytics.js', 'ga');
 
   ga('create', 'UA-87769268-1', 'auto');
   ga('send', 'pageview');
