Initial commit of updated working, not including detail sections.

--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -8,8 +9,8 @@
   <meta name="description" content="Drupal on-site contractors for hire">
   <meta name="author" content="">
   <link rel="icon" href="favicon.ico">
-  <link rel="icon" type="image/png" href="favicon-32x32.png" sizes="32x32"/>
-  <link rel="icon" type="image/png" href="favicon-16x16.png" sizes="16x16"/>
+  <link rel="icon" type="image/png" href="favicon-32x32.png" sizes="32x32" />
+  <link rel="icon" type="image/png" href="favicon-16x16.png" sizes="16x16" />
 
   <title>Integrated Experts | Outcome-driven software engineering</title>
 
@@ -37,17 +38,16 @@
   <div class="row">
     <div class="col-md-9 intro">
       <p>
-        Integrated Experts are a collective of senior IT consultants who fully embed themselves into on-site development teams, and leverage agile methodologies to deliver outstanding results for businesses.
+        We are a collective of senior IT consultants with decades of experience in all aspects of software engineering. Integrated Experts are available to work onsite, embedded, helping to manage and mold your team or we are able to work remotely using agile methodologies to ensure your project succeeds.
       </p>
       <p>
-        Having us fully integrated, the Client is in the full control of the flow of the project and, at the same time,
-        has all the expertise required to deliver it on-time.
+        Having us fully integrated, you are in the full control of the flow of you project and, at the same time, have all the expertise required to deliver it on-time.
       </p>
       <p>
-        Professionalism is our core value: anything we do follows the best practices and we are imposing this approach to all projects we are working on.
+        At the core of what we do is our professionalism. To make this happen we employ best practices and trusted technologies from the start of the project to delivery.
       </p>
 
-      <blockquote>It's time to bring software projects to a level that a business can rely on!</blockquote>
+      <blockquote>It's time to tame your software projects so that you can get back to doing business!</blockquote>
     </div>
     <div class="col-md-3 text-center">
       <img src="img/association_org_member_badge.svg" alt="Drupal Association Organization Member Badge">
@@ -58,8 +58,8 @@
   <hr>
 
   <p class="cta">
-    <strong>If your project needs expertise or saving, contact us via
-      <a href="mailto:info@integratedexperts.com">info@integratedexperts.com</a></strong>
+    <strong>If your project needs saving, or you just need a helping hand, contact us at
+    <a href="mailto:info@integratedexperts.com">info@integratedexperts.com</a></strong>
   </p>
 
   <hr>
@@ -77,8 +77,10 @@
     </div>
     <div class="col-md-4">
       <h1>UX and Strategy</h1>
-      <p>We can help extract that important information about your project that's being sitting in the back of your mind.</p>
-      <p>And then we can make some strategic plans to make your customers fall in love with your product.</p>
+      <p>
+        Got ideas sitting at the back of your mind and need help making them a reality? We can help with design, strategy and implementation and make sure that customers will fall in love with your product.
+      </p>
+
     </div>
   </div>
 
@@ -87,63 +89,36 @@
   <h1 class="section-title">Our approach</h1>
   <div class="row">
     <div class="col-md-4">
-      <h2>Website architecture assessment</h2>
-      <p>Assessment of the website architecture is the first step when starting working with projects.</p>
+      <h2>Assessment</h2>
+      <p>
+        A website is more than a collection of static web pages. We start with an analysis of your requirements and then move on to documenting the data and workflows required so that an informed decision can be made about what work should be done.
+      </p>
       <p>
         <a class="btn btn-default" href="#website-architecture-assessment" role="button">View details »</a>
       </p>
     </div>
     <div class="col-md-4">
-      <h2>Best practices</h2>
-      <p>What they are and how to compromise on velocity without compromising on quality</p>
+      <h2>Development</h2>
+      <p>Best practice is more than just a keyword to us, it's part of our DNA. Doing things the right way from the start doesn't mean compromising on your timeframes!</p>
+      <ul>
+        <li><strong>Local development environments - </strong>A turnkey developer platform enables developers to concentrate on writing great code instead of being distracted by getting set up</li>
+        <li><strong>Code cleanup - </strong>Whether it is a new or existing project, code that follows coding standards and well established design patterns and principles is much easier to maintin and extend</li>
+        <li><strong>Development process - </strong>It is important to make sure that code is reviewed both for quality and for knowledge transfer. Tools can help with this but in the end it comes down to making sure there is a cohesion within the team.</li>
+        <li><strong>Automated testing - </strong>Every time a developer commits a change, a full suite of tests should be run. And pass!</li>
+      </ul>
       <p>
         <a class="btn btn-default" href="#best-practices" role="button">View details »</a>
       </p>
     </div>
     <div class="col-md-4">
-      <h2>Local development environment</h2>
-      <p>The most important tool in the developer's toolbox is a local development environment</p>
+      <h2>Deployment</h2>
+      <p>Deploying software should just work and there should be a high level of confidence that what we are deploying is of high quality and is robust.</p>
+      <ul>
+        <li><strong>Automated builds - </strong>Deploying and building code should be done using repeatable steps - automatically!</li>
+        <li><strong>Cloud hosting - </strong>Hosting in the cloud has proven to be the most reliable and hassle-free approach. This doesn't mean you are locked into a process as the best cloud hosting allows ultimate flexibility for those that know how to exploit it.</li>
+      </ul>
       <p>
         <a class="btn btn-default" href="#local-development-environment" role="button">View details »</a>
-      </p>
-    </div>
-  </div>
-  <div class="row">
-    <div class="col-md-4">
-      <h2>Automated builds</h2>
-      <p>Build on each push to repository and deploy to production using repeatable steps - automatically!</p>
-      <p>
-        <a class="btn btn-default" href="#automated-builds" role="button">View details »</a>
-      </p>
-    </div>
-    <div class="col-md-4">
-      <h2>Automated testing</h2>
-      <p>Writing automated tests could be hard, but there are ways to achieve quick wins in a very short time</p>
-      <p>
-        <a class="btn btn-default" href="#automated-testing" role="button">View details »</a>
-      </p>
-    </div>
-    <div class="col-md-4">
-      <h2>Cloud hosting</h2>
-      <p>Hosting in the cloud has proven to be the most reliable and hassle-free approach</p>
-      <p>
-        <a class="btn btn-default" href="#cloud-hosting" role="button">View details »</a>
-      </p>
-    </div>
-  </div>
-  <div class="row">
-    <div class="col-md-4">
-      <h2>Code cleanup</h2>
-      <p>Whether it is a new or existing project, a code that follows coding standards is much easier to maintain</p>
-      <p>
-        <a class="btn btn-default" href="#code-cleanup" role="button">View details »</a>
-      </p>
-    </div>
-    <div class="col-md-4">
-      <h2>Development processes</h2>
-      <p>We help establish a process that fits your organisation</p>
-      <p>
-        <a class="btn btn-default" href="#development-processes" role="button">View details »</a>
       </p>
     </div>
   </div>
@@ -152,7 +127,7 @@
 
   <p class="cta">
     <strong>If your project needs expertise or saving, contact us via
-      <a href="mailto:info@integratedexperts.com">info@integratedexperts.com</a></strong>
+    <a href="mailto:info@integratedexperts.com">info@integratedexperts.com</a></strong>
   </p>
 
   <hr>
@@ -226,8 +201,8 @@
   <hr>
 
   <p class="cta">
-    <strong>If your project needs expertise or saving, contact us via
-      <a href="mailto:info@integratedexperts.com">info@integratedexperts.com</a></strong>
+    <strong>If your project needs saving, or you just need a helping hand, contact us at
+    <a href="mailto:info@integratedexperts.com">info@integratedexperts.com</a></strong>
   </p>
 
   <hr>
@@ -249,11 +224,11 @@
 <script src="js/ie10-viewport-bug-workaround.js"></script>
 <script async src="//platform.twitter.com/widgets.js" charset="utf-8"></script>
 <script>
-  (function (i, s, o, g, r, a, m) {
+  (function(i, s, o, g, r, a, m) {
     i['GoogleAnalyticsObject'] = r;
-    i[r] = i[r] || function () {
-        (i[r].q = i[r].q || []).push(arguments)
-      }, i[r].l = 1 * new Date();
+    i[r] = i[r] || function() {
+      (i[r].q = i[r].q || []).push(arguments)
+    }, i[r].l = 1 * new Date();
     a = s.createElement(o),
       m = s.getElementsByTagName(o)[0];
     a.async = 1;
@@ -263,6 +238,8 @@
 
   ga('create', 'UA-87769268-1', 'auto');
   ga('send', 'pageview');
+
 </script>
 </body>
+
 </html>
