Updated meta tags.

--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
-  <meta name="description" content="Drupal on-site contractors for hire">
+  <meta name="description" content="Drupal and DevOps on-site contractors for hire">
+  <meta name="keywords" content="Drupal, DevOps, CI, Continuous Integration, pipeline, Acquia, Amazee, government">
   <meta name="author" content="">
   <link rel="icon" href="favicon.ico">
   <link rel="icon" type="image/png" href="favicon-32x32.png" sizes="32x32" />
